<resources>
    <string name="app_name">VocaVerseApplication</string>
<<<<<<< HEAD
=======
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="Theme">Theme</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

>>>>>>> origin/main
</resources>