<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/email"
            android:title="@string/home"/>
        <item
            android:id = "@+id/nav_profile"
            android:icon="@drawable/account"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/email"
            android:title="@string/share"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/email"
            android:title="@string/about_us"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/email"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>